kubernetes_OLD/yml/springbootsoapservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootsoapservice-v1
  labels:
    app: springbootsoapservice  
spec:
#  serviceName: "springbootsoapservice-hs"
  replicas: 1
#  updateStrategy:
#    type: RollingUpdate
#  podManagementPolicy: Parallel  
  selector:
    matchLabels:
      app: springbootsoapservice    
  template:
    metadata:
      labels:
        app: springbootsoapservice
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"        
    spec:
      containers:
      - name: springbootsoapservice
        image: marcinkasinski/springbootsoapservice
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/prometheus
            port: 8080
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 300
          periodSeconds: 10
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config-springbootsoapservice-bootstrap-yml-cm
          mountPath: /usr/src/myapp/config/bootstrap.yml
          subPath: bootstrap.yml
      volumes:
        - name: config-springbootsoapservice-bootstrap-yml-cm
          configMap:
            name: springbootsoapservice-bootstrap-yml-cm
---
apiVersion: v1
kind: Service
metadata:
  name: springbootsoapservice
  labels:
    app: springbootsoapservice
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: springbootsoapservice_mapping
      prefix: /
      timeout_ms: 10000
      service: springbootsoapservice.apps:8080
      #only works via istio ingress gateway
      host: springbootsoapservice.apps.svc.cluster.local
    
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: springbootsoapservice
---
apiVersion: v1
kind: Service
metadata:
  name: am-springbootsoapservice
  labels:
    app: springbootsoapservice
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: am-springbootsoapservice_mapping
      prefix: /
      timeout_ms: 10000
      service: am-springbootsoapservice.apps:8080
      #only works via istio ingress gateway
      host: springbootsoapservice.apps.svc.cluster.local
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: springbootsoapservice
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootsoapservice-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: springbootsoapservice
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootsoapservice
          servicePort: 8080
---
#curl -H "Host: springbootsoapservice.itzone.pl" localhost/api/get-by-email?email=ajax@ajax.com
#curl -H "Host: springbootsoapservice.apps.svc.cluster.local" localhost/api/get-by-email?email=ajax@ajax.com
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootsoapservice
spec:
# aby port przyjął w hostach trzeba usunąć galley deployment
  hosts:
  - "springbootsoapservice.itzone.pl"
  - "springbootsoapservice.apps.svc.cluster.local"
  - "springbootsoapservice" # from webapplication
  gateways:
  - itzone-gateway  
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springbootsoapservice
        subset: v1
        port:
          number: 8080
      weight: 1
    - destination:
        host: springbootsoapservice
        subset: v2
        port:
          number: 8080
      weight: 99          
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - OPTIONS
      maxAge: "1s"
    appendHeaders:
      key1: "aaax-request-start1"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springbootsoapservice
spec:
  host: springbootsoapservice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
#curl -H "Host: springbootsoapservice2.itzone.pl" localhost/api/get-by-email?email=ajax@ajax.com
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootsoapservice2.itzone.pl
spec:
  hosts:
  - "springbootsoapservice2.itzone.pl"
  gateways:
  - itzone-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springbootsoapservice
        #host: ambassador.default.svc.cluster.local # interpreted as springbootweb.apps.svc.cluster.local
        port:
          number: 8080
          #number: 80
---
